skeleton of PatchMovieEdition().
