# openapi.yml
@@ -176,7 +176,52 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'  
+                $ref: '#/components/schemas/Error'
+    patch:
+      summary: Update a movie edition work with the given uuid.
+      description: Updates a movie edition work identified by the given UUID
+      operationId: patchMovieEdition
+      parameters:
+        - name: uuid
+          in: path
+          description: UUID of the work to update
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MovieEdition'
+      responses:
+        '200':
+          description: Movie edition updated successfully
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Work with this UUID not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '409':
+          description: Work with this UUID is not a movie edition.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
   /sources/{uuid}:
     get:
